HOTFIX logout button on mobile (layout fixed)

--- a/public_html/profiles/os2dagsorden/themes/os2dagsorden_theme/css/os2dagsorden-theme-alpha-default-narrow.css
+++ b/public_html/profiles/os2dagsorden/themes/os2dagsorden_theme/css/os2dagsorden-theme-alpha-default-narrow.css
@@ -17,6 +17,8 @@
 .block-views .view-user-logout-menu li div {
     display: block;
     margin-bottom: 10px;
-    float: right;
- }
+}
 
+.block-views .view-user-logout-menu li div.right{
+  float: right; 
+}
